# AI_ORCHISTRATION_HW1

./: .env-example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: rate_limits.json  sensitivity_config.json  setup.json
docs/: PLAN.md  PLAN_training_networks.md  PRD.md  PRD_building_dataset.md  PRD_dataset_generation.md  PRD_fcn.md  PRD_lstm.md  PRD_rnn.md  PRD_training_networks.md  TODO.md  TODO_building_dataset.md  TODO_training_networks.md  api_docs.md  prompt_engineering_log.md
notebooks/: results_analysis.ipynb
results/: comparison_table.csv  scaler_params.json  training_log_fcn.csv  training_log_lstm.csv  training_log_rnn.csv
results/sensitivity/: sensitivity_results.csv
src/neural_signal/: __init__.py  __main__.py  constants.py  main.py  run_sensitivity.py
src/neural_signal/models/: fcn.py  lstm.py  rnn.py
src/neural_signal/sdk/: _types.py  _viz.py  sdk.py
src/neural_signal/services/: data_loader.py  evaluator.py  preprocessor.py  sensitivity.py  trainer.py  visualizer.py
src/neural_signal/shared/: config.py  config_types.py  gatekeeper.py  version.py
src/signal_dataset/: __init__.py  __main__.py  constants.py  main.py  visualize.py
src/signal_dataset/sdk/: __init__.py  sdk.py
src/signal_dataset/services/: __init__.py  dataset_builder.py  noise_injector.py  signal_generator.py  windower.py
src/signal_dataset/shared/: __init__.py  config.py  gatekeeper.py  version.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_pipeline_full.py  test_pipeline_quality.py  test_sdk_run_all.py  test_sensitivity_integration.py  test_val_mse_bounds.py
tests/unit/: conftest.py  test_config.py  test_config_dataset.py  test_config_noise.py  test_config_validation.py  test_data_loader.py  test_data_loader_extra.py  test_dataset_builder.py  test_evaluator.py  test_evaluator_extra.py  test_fcn.py  test_gatekeeper.py  test_lstm.py  test_nn_config.py  test_nn_gatekeeper.py  test_nn_sdk.py  test_nn_sdk_mocks.py  test_noise_injector.py  test_preprocessor.py  test_rnn.py  test_sdk.py  test_sensitivity.py  test_signal_generator.py  test_trainer.py  test_trainer_device.py  test_trainer_extended.py  test_trainer_part2.py  test_visualizer.py  test_visualizer_colors.py  test_visualizer_extra.py  test_windower.py
