[project]
name = "neural-signal"
version = "1.0.0"
description = "Neural Network Signal Regression — FCN, RNN, LSTM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
neural-signal = "neural_signal.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_signal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/neural_signal/main.py",
    "src/signal_dataset/main.py",
    "src/signal_dataset/__main__.py",
    "src/signal_dataset/visualize.py",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 85
